# Passport_recognition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
passport_recognition/: dataset.py  evaluate.py  inference.py  model.py  train.py
